# ddapi-rs

./: .gitignore  Cargo.toml  README.md  release-guide.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: publish.yaml  rust.yml
src/: error.rs  error_ddapi.rs  errors.rs  lib.rs  model.rs  tests.rs
src/api/: ddnet.rs  ddstats.rs  mod.rs
src/scheme/: ddnet.rs  ddstats.rs  mod.rs
src/scheme/ddnet/: latest_finishes.rs  map.rs  master.rs  mod.rs  player.rs  query.rs  query_map.rs  query_mapper.rs  releases_maps.rs  skins.rs  status.rs
src/util/: encoding.rs  mod.rs  time.rs  tw_addr.rs
